C2: Node is wrongly marked as reduction resulting in a wrong execution due to wrong vector instructions

XMLWordPrintable

    • b64
    • 9
    • b31
    • Verified

        This is just a generic synopsis. Please change accordingly.

        The attached fuzzer test produces a different result for C2 compared to C1/interpreter. It starts to fail after JDK-8235673. However, this change only reveals an existing problem by changing the inline decision of the test. By additionally setting -XX:MaxInlineSize=37, the bug can actually be traced back to JDK-8240248.

        To reproduce:
        $ java -Xint Test.java > xint.log
        $ java -Xcomp -XX:CompileOnly=Test Test.java > c2.log

        $ diff xint.log c2.log
        62c62
        < vMeth1_check_sum: -4505034666541838094
        ---
        > vMeth1_check_sum: 8100660520553448565
        71c71
        < vMeth1_check_sum: 121887261065963647
        ---
        > vMeth1_check_sum: 6886533561546985349
        80c80
        < vMeth1_check_sum: 4748809188657399033
        ---
        > vMeth1_check_sum: 5672397492800002690
        89c89
        < vMeth1_check_sum: -9071012959872778812
        ---
        > vMeth1_check_sum: 4458264447119787987


          1. FuzzerUtils.java
            13 kB
          2. Reduced.java
            0.7 kB
          3. Test.java
            7 kB

              Assignee:
              Christian Hagedorn
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: