8261147: C2: Node is wrongly marked as reduction resulting in a wrong execution due to wrong vector instructions

Reviewed-by: roland
Backport-of: f791fdf23ef6e49e7e1ca68e33a16f6686e0bfa1